--- a/www/cubism.html
+++ b/www/cubism.html
@@ -1,23 +1,86 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Mesures^3</title>
-        <link href="style_cube.css" media="screen" rel="stylesheet" type="text/css" />
-        <style>
-#rss { min-height: 155px; }
-        </style>
-    </head>
-    <body>
-        <h1>Mesures.</h1>
+<meta charset="utf-8">
+<title>Cube</title>
+<style>
 
-        <div id="datas">
-            <div id="rss"></div>
-        </div>
+@import url(style_cube.css);
 
+</style>
+<select id="step">
+  <option value="1e4">10 seconds</option>
+  <option value="6e4">1 minute</option>
+  <option value="3e5">5 minutes</option>
+</select>
         <script src="http://d3js.org/d3.v2.min.js" type="text/javascript"></script>
         <script src="cubism_v1_min.js" type="text/javascript"></script>
         <script src="metrics_cube.js" type="text/javascript"></script>
-    </body>
+<script>
 
-</html>
+//
+var step = +cubism.option("step", 1e4);
+
+//
+var context = cubism.context()
+    .step(step)
+    .size(1440);
+
+//
+var cube = context.cube();
+
+// Add top and bottom axes to display the time.
+d3.select("body").selectAll(".axis")
+    .data(["top", "bottom"])
+  .enter().append("div")
+    .attr("class", function(d) { return d + " axis"; })
+    .each(function(d) { d3.select(this).call(context.axis().ticks(12).orient(d)); });
+
+// Add a mouseover rule.
+d3.select("body").append("div")
+    .attr("class", "rule")
+    .call(context.rule());
+
+//
+d3.select("body").insert("div", ".bottom")
+    .attr("class", "group")
+    .call(function() { this.append("header").text("performance"); })
+  .selectAll(".horizon")
+    .data([
+      {title: "load", metric: cube.metric("sum(cube_compute(ms))").divide(step)},
+      {title: "median latency (ms)", metric: cube.metric("median(cube_compute(ms))")}
+    ])
+  .enter().append("div")
+    .attr("class", "horizon")
+  .call(context.horizon()
+    .title(function(d) { return d.title; })
+    .metric(function(d) { return d.metric; }));
+
+//
+d3.json("/1.0/types", function(types) {
+  d3.select("body").insert("div", ".bottom")
+      .attr("class", "group")
+      .call(function() { this.append("header").text("incoming events (/s)"); })
+    .selectAll(".horizon")
+      .data(types)
+    .enter().append("div")
+      .attr("class", "horizon")
+    .call(context.horizon()
+      .metric(function(d) { return cube.metric( d + " mean").divide(step / 1e3); }));
+});
+
+// On mousemove, reposition the chart values to match the rule.
+context.on("focus", function(i) {
+  d3.selectAll(".value").style("right", i == null ? null : context.size() - i + "px");
+});
+
+// Initialize the step menu's selection.
+d3.selectAll("#step option").property("selected", function() {
+  return this.value == step;
+});
+
+// Update the location on step change.
+d3.select("#step").on("change", function() {
+  window.location = "?step=" + this.value + "&" + location.search.replace(/[?&]step=[^&]*(&|$)/g, "$1").substring(1);
+});
+
+</script>
+
